src/test/ui/issues/issue-39211.stderr
error[E0747]: type parameters cannot appear within an array length expression
  --> $DIR/issue-39211.rs:11:17
   |
LL |     let a = [3; M::Row::DIM];
   |                 ^^^^^^^^^^^ type parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0747`.
